workshop04/nwapp/nwapp-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nwapp-ing
  labels:
    app: northwind
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # /$2 refers to second capture group
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  # LoadBalancer external IP
  - host: nwapp.104.248.98.17.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nwapp-svc
          servicePort: 8080
